--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "node": "^18.20 || ^20.10 || >=21.0.0"
   },
   "dependencies": {
+    "@conform-to/react": "^1.2.1",
+    "@conform-to/zod": "^1.2.1",
     "@prisma/client": "^5.11.0",
     "@remix-run/dev": "^2.7.1",
     "@remix-run/node": "^2.7.1",
