--- a/package.json
+++ b/package.json
@@ -41,6 +41,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "remix-utils": "^7.6.0",
+    "slate": "^0.103.0",
+    "slate-history": "^0.109.0",
+    "slate-react": "^0.110.1",
     "vite-tsconfig-paths": "^5.0.1",
     "zod": "^3.23.8"
   },
