--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "slate": "^0.110.2",
     "slate-history": "^0.110.3",
     "slate-react": "^0.111.0",
+    "tiny-invariant": "^1.3.3",
     "vite-tsconfig-paths": "^5.1.3",
     "zod": "^3.23.8"
   },
