--- a/shopify.app.toml
+++ b/shopify.app.toml
@@ -13,7 +13,7 @@ include_config_on_deploy = true
 
 [access_scopes]
 # Learn more at https://shopify.dev/docs/apps/tools/cli/configuration#access_scopes
-scopes = "write_metaobjects"
+scopes = "write_metaobjects, read_files"
 
 [auth]
 redirect_urls = [
